--- a/基礎/包裝類.md
+++ b/基礎/包裝類.md
@@ -50,3 +50,26 @@
 	}
 
 ```
+
+```
+    public static void main(String[] args) {
+        List<Integer> list = Arrays.asList(1);
+        int i1 = list.get(0);//自動拆箱
+        Integer i2 = list.get(0);
+
+        double d1 = list.get(0);
+//        Double d2 = list.get(0);//Double Integer 類型不一致
+
+//        Integer i3 = Double.valueOf(list.get(0));//Integer Double 類型不一致
+//        int i4 = Double.valueOf(list.get(0));//int Double 類型不一致，拆箱後不會類型自動強轉
+
+//        Double d3 = Integer.valueOf(list.get(0));//Double Integer 類型不一致
+        double d4 = Integer.valueOf(list.get(0));//拆箱後類型自動提升
+
+        System.out.println("i1: " + i1);//1
+        System.out.println("i2: " + i2);//1
+        System.out.println("d1: " + d1);//1.0
+        System.out.println("d4: " + d4);//1.0
+
+    }
+```
