--- a/基礎/內部類.md
+++ b/基礎/內部類.md
@@ -1,5 +1,7 @@
 # 內部類:類的第五個成員
    * 定義:Java中允許將一個類A聲明在另一個類B中，則類A就是內部類，類B稱為外部類.
+   * 可以包含最終靜態字段但不能包含靜態方法
+   * class的內部可以聲明interface，interface內部可以聲明class
    * 內部類的分類:
 	* 成員內部類(靜態、非靜態) vs 局部內部類(方法內、代碼塊內、構造器內)
    * 成員內部類的理解:
