--- a/基礎/內部類2.md
+++ b/基礎/內部類2.md
@@ -1,7 +1,7 @@
 | 類型                   | 是否可以有靜態成員                   | 詳細說明                                                                                                     |
 |------------------------|--------------------------------------|--------------------------------------------------------------------------------------------------------------|
 | **靜態嵌套類**        | 可以有靜態成員（包括靜態變量和靜態方法） | 靜態嵌套類是外部類的靜態成員，不依賴於外部類的實例。可以擁有靜態變量和靜態方法。                              |
-| **非靜態成員內部類**  | 只能有靜態常量變量                   | 非靜態成員內部類依賴於外部類的實例，只能擁有靜態常量變量（`static final`）。其他靜態成員會引發編譯錯誤。     |
+| **非靜態成員內部類**  | 只能有靜態常量變量                   | 非靜態成員內部類依賴於外部類的實例，只能擁有靜態常量變量（`static final`）。其他靜態成員會引發編譯錯誤。也不能有靜態方法。     |
 | **局部內部類**        | 不允許有靜態成員                     | 局部內部類定義在方法內部，與方法的執行上下文相關聯，因此不能有靜態成員。                                      |
 | **匿名內部類**        | 不允許有靜態成員                     | 匿名內部類沒有名稱，且通常用於一次性實現接口或抽象類。不能包含靜態成員。                                      |
 
